# ml-training-orchestrator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  compose.yml  fly.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: build-images.yml  ci.yml  deploy.yml  evidently-reports.yml
dagster_project/: definitions.py
dagster_project/asset_checks/: evaluation_gate.py  schema_checks.py
dagster_project/assets/: feast_materialization.py  features_dbt.py  features_python.py  monitoring.py  raw.py  serving.py  staging.py  training.py
dagster_project/resources/: __init__.py  duckdb_resource.py  feast_resource.py  mlflow_resource.py  s3_resource.py
dagster_project/schedules/: daily_drift.py  daily_score.py  feast_hourly.py  nightly_retain.py
dagster_project/sensors/: bts_new_month.py  drift_retrain_sensor.py  run_failure_sensor.py
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: test_no_future_leakage.sql
dbt_project/models/features/: _features_schema.yml  feat_airport_static.sql  feat_calendar.sql  feat_carrier_rolling.sql  feat_dest_airport_windowed.sql  feat_origin_airport_windowed.sql  feat_route_rolling.sql
dbt_project/models/marts/: _marts_schema.yml  mart_drift_metrics.sql  mart_predictions.sql  mart_training_dataset.sql
dbt_project/models/staging/: _sources.yml  _stg_schema.yml  stg_dim_airport.sql  stg_dim_route.sql  stg_feat_cascading_delay.sql  stg_flights.sql  stg_weather.sql
dbt_project/seeds/: hub_airports.csv
dbt_project/tests/: assert_pit_correct.sql
docs/: architecture.md  batch-scoring.md  ci-cd.md  configuration.md  data-ingestion.md  data-structure-and-query-guidance.md  deployment.md  evaluation-gate.md  feature-engineering.md  feature-store.md  getting-started.md  infrastructure.md  monitoring.md  pit-correctness.md  runbooks.md  serving.md  staging-validation.md  testing.md  training.md
feature_repo/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  feature_store.yml  feature_views.py
infra/compose/: compose.dev.yml  compose.prod.yml
infra/docker/: Caddyfile  dagster-entrypoint.sh  dagster.Dockerfile  serving.Dockerfile
infra/docker/mlflow/: Dockerfile
infra/postgres/: create_monitoring_tables.sql  init.sql
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
infra/terraform/cloudflare_r2/: main.tf  outputs.tf  variables.tf
infra/terraform/oracle/: cloud-init.sh  main.tf  outputs.tf  variables.tf
react/: .env.dev  .env.prod  .env.production  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
react/src/: api.ts  routeTree.gen.ts  router.tsx  vite-env.d.ts
react/src/components/: AppShell.tsx  ErrorFallback.tsx  Globe.tsx  NotFound.tsx  Sparkline.tsx  StatCard.tsx  ToggleThemeMode.tsx
react/src/config/: theme.ts  themePrimitives.ts
react/src/routes/: __root.tsx  accuracy.tsx  drift.tsx  index.tsx  indexAlt.tsx  models.tsx  predictions.tsx
scripts/: bootstrap_dev.sh  create_monitoring_tables.sql
src/bmo/batch_scoring/: __init__.py  score.py
src/bmo/common/: config.py  iceberg.py  paths.py  storage.py
src/bmo/evaluation_gate/: __init__.py  base.py  checks.py  gate.py  reports.py
src/bmo/ingestion/: bts.py  faa.py  noaa.py
src/bmo/monitoring/: __init__.py  drift.py  retrain_trigger.py
src/bmo/pyspark_jobs/: __init__.py  cascading_delay.py  session.py
src/bmo/serving/: __init__.py  api.py  feature_client.py  model_loader.py  partitions.py  schemas.py
src/bmo/staging/: contracts.py  dimensions.py  flights.py  timezone.py  weather.py
src/bmo/training/: __init__.py  hpo.py  reproduce.py  train.py
src/bmo/training/models/: __init__.py  mllib_baseline.py  xgboost_model.py
src/bmo/training_dataset_builder/: __init__.py  builder.py  dataset_handle.py  leakage_guards.py  pit_join.py
tests/: conftest.py
tests/determinism/: test_reproduce_run.py
tests/integration/: test_feast_roundtrip.py  test_leakage_planted_value.py
tests/unit/: test_dataset_handle.py  test_evaluation_gate.py  test_ingestion_bts.py  test_ingestion_noaa.py  test_pit_join.py  test_serving_feature_client.py  test_staging_timezone.py  test_training.py
